Fix info panel to be visible on phone

--- a/static/css/template.css
+++ b/static/css/template.css
@@ -339,10 +339,10 @@ td {padding: 0px; margin: 0px;}
 
   div.satellite_tracker_content {width:94%; margin-left: 3%; margin-right: 3%; margin-top: 10%; padding: 0px; font-size: 22px;}
   .choose_satellite{width: 100%; margin-top: 10%; padding: 0px;}
-  .tracker_info{width:100%; height: 300px; margin-top: 640px; margin-left: 0px;  padding: 0.5%;
+  .tracker_info{width:100%; height: 100%; margin-bottom: 5%; margin-top: 640px; margin-left: 0px; padding: 0.5%;
   }
   .tracker_map{width:100%; height: 600px;}
-  .satellite_panel{width: 100%; height: 130%}
+  .satellite_panel{width: 100%; height: 130%;}
 
 
   form { width: 100%; padding: 0; margin: 0;}
